--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,7 +47,7 @@ server:
     accesslog:
       rotate: true      
       encoding: UTF-8
-      pattern: "%h %l %u [%t] \"%m %U %H\" %s %b %D"
+      pattern: "%{X-Forwarded-For}i %h %l %u [%t] \"%m %U %H\" %s %b %D"
       enabled: true
     basedir: "/foodcalorie"
   servlet:
@@ -77,7 +77,7 @@ server:
     accesslog:
       rotate: true      
       encoding: UTF-8
-      pattern: "%h %l %u [%t] \"%m %U %H\" %s %b %D"
+      pattern: "%{X-Forwarded-For}i %h %l %u [%t] \"%m %U %H\" %s %b %D"
       enabled: true
     basedir: "C://dev/work/fitness/foodcalorie"
   servlet:
